src/z80asm/z80asm2/t/20-preproc/expected/ifndef_11.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/ifndef_11.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/ifndef_11.asm...
t/20-preproc/input/ifndef_11.asm:1:8: error: Expected identifier after IFNDEF
    #ifndef ; no symbol
           ^
t/20-preproc/input/ifndef_11.asm:3:9: error: Expected identifier after IFNDEF
    #ifndef 23 ; no symbol
            ^
t/20-preproc/input/ifndef_11.asm:5:11: error: Unexpected token after IFNDEF: extra
    #ifndef X extra ; extra input
              ^
t/20-preproc/input/ifndef_11.asm:7:2: error: Unexpected ELSE directive without matching IF
    #else ; else without if
     ^
t/20-preproc/input/ifndef_11.asm:8:2: error: Unexpected ELSEIFNDEF directive without matching IF
    #elseifndef ; elseifndef without if
     ^
t/20-preproc/input/ifndef_11.asm:9:2: error: Unexpected ELIFNDEF directive without matching IF
    #elifndef ; elifndef without if
     ^
t/20-preproc/input/ifndef_11.asm:10:2: error: Unexpected ENDIF directive without matching IF
    #endif ; endif without if
     ^
t/20-preproc/input/ifndef_11.asm:13:2: error: Multiple ELSE in IF block
    #else ; two elses
     ^
t/20-preproc/input/ifndef_11.asm:17:2: error: Unexpected ELSEIFNDEF directive after ELSE
    #elseifndef ; elseifndef after else
     ^
t/20-preproc/input/ifndef_11.asm:21:2: error: Unexpected ELIFNDEF directive after ELSE
    #elifndef ; elifndef after else
     ^
# file: t/20-preproc/input/ifndef_11.asm
EndOfLine	"\n"	23:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
